# theveryseriousjuniperdevgamejam2026

./: cabal.project  flake.nix  justfile  test.cabal
games/ld59/LD59/: Art.hs  BGM.hs  Buffer.hs  Controls.hs  Debug.hs  Dir.hs  Draw.hs  Env.hs  Init.hs  Level.hs  Main.hs  Random.hs  Rate.hs  Score.hs  Screen.hs  Sfx.hs  Snake.hs  Text.hs  Tick.hs  Wave.hs  World.hs
games/ld59/LD59/Jfxr/: JSFFI.hs  Types.hs
games/ld59/main/: Main.hs
games/mj626/MJ626/: Art.hs  BGM.hs  Buffer.hs  Camera.hs  Controls.hs  Coords.hs  Debug.hs  Dir.hs  Draw.hs  ECS.hs  Env.hs  Init.hs  Main.hs  Physics.hs  PureSprite.hs  Random.hs  Rate.hs  Scene.hs  Screen.hs  Sfx.hs  Text.hs  Tick.hs  Wave.hs  World.hs
games/mj626/MJ626/Bowling/: Pin.hs  Score.hs
games/mj626/MJ626/Jfxr/: JSFFI.hs  Types.hs
games/mj626/main/: Main.hs
scripts/json-type-gen/: JsonTypeGen.hs
src/: Lib.hs
src/Hammer/: Types.hs
src/Pixi/: Types.hs
static/ld59/: index.html  main.js
static/mj626/: Default 1.jfxr  index.html  jfxr.min.js  ld59-sin.jfxr  pixi-export.js  wasm-init.js
