cabal-version: 3.14
name: test
version: 0.3.0.0
synopsis: Haskell wasm gamedev
-- A longer description of the package.
description:
  haskell web game

-- The license under which the package is released.
license: MIT
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: Armando Ramirez
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: armando.m.ramirez@gmail.com
-- A copyright notice.
-- copyright:
category: Development
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files:
  README.md

homepage: https://github.mpg.is/wasm-game

source-repository head
  type: git
  location: https://github.com/Tritlo/wasm-game.git

common warnings
  ghc-options:
    -Wall
    -Werror=incomplete-patterns

  cc-options: -Wnomain-return-type

common wasm-export
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=wasmMain"

library
  hs-source-dirs: src
  build-depends:
    apecs,
    base,
    ghc-experimental

  default-language: GHC2021
  -- cabal-gild: discover src
  exposed-modules:
    Hammer.Types
    Lib
    Pixi.Types

common mj626-shared
  import: warnings
  default-language: GHC2021
  build-depends:
    aeson,
    apecs,
    base,
    bytestring,
    containers,
    cute-c2,
    ease,
    extra,
    generic-lens,
    ghc-experimental,
    lens,
    lens-aeson,
    linear,
    safe,
    scientific,
    test

library mj626-lib
  import: mj626-shared
  hs-source-dirs: games/mj626
  -- cabal-gild: discover games/mj626 --exclude=games/mj626/Main.hs
  exposed-modules:
    MJ626.Art
    MJ626.BGM
    MJ626.Buffer
    MJ626.Controls
    MJ626.Debug
    MJ626.Dir
    MJ626.Draw
    MJ626.Env
    MJ626.Init
    MJ626.Jfxr.JSFFI
    MJ626.Jfxr.Types
    MJ626.Main
    MJ626.Random
    MJ626.Rate
    MJ626.Screen
    MJ626.Sfx
    MJ626.Text
    MJ626.Tick
    MJ626.Wave
    MJ626.World

executable mj626
  import: mj626-shared, wasm-export
  hs-source-dirs: games/mj626/main
  main-is: Main.hs
  build-depends:
    test:mj626-lib

executable test
  -- Import common warning flags.
  import: warnings
  -- .hs or .lhs file containing the Main module.
  main-is: Test.hs
  -- cabal-gild: discover app --exclude=app/Test.hs
  other-modules: TestECS
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:
    apecs,
    base,
    ghc-experimental,
    test

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: GHC2021
  -- GHC options for reactor module: disable Haskell main, use reactor model, export main symbol
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=wasmMain"

library json-type-gen
  hs-source-dirs: scripts/json-type-gen
  -- cabal-gild: discover scripts/json-type-gen
  exposed-modules: JsonTypeGen
  default-language: GHC2021
  build-depends:
    aeson,
    base,
    containers
